--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <li>JavaScript - <i>Origamid</i></li>
                         <li>Técnico de informática - <i>Microlins</i></li>
                         <li>Inglês - <i>Wizard</i></li>
+                        <li>Git - <i>Udemy</i></li>
                     </ul>
                 </section>
             </div>
