--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <label>
                 <input type="checkbox" class="slider btn">
-                <div class="switch">
+                <div title="Clica!" class="switch">
                     <div class="suns"></div>
                     <div class="moons">
                         <div class="star star-1"></div>
