--- a/index.html
+++ b/index.html
@@ -115,27 +115,6 @@
                         <li>Git - <i>Udemy</i></li>
                     </ul>
                 </section>
-            </div>
-
-            <div class="coluna-direita">
-                <section class="experiencias">
-                    <h2>Experiêncas</h2>
-                    <div class="cargo">
-                        <h3>FrontEnd</h3>
-                        <h4>Projeto Arquiteto</h4>
-                        <p>Realizei o desenvolvimento front-end completo de um website para uma empresa de arquitetura. Utilizei HTML, CSS e JavaScript para criar um layout moderno e responsivo, além de implementar recursos interativos e otimizações de desempenho.</p>
-                    </div>
-                    <div class="cargo">
-                        <h3>FrontEnd</h3>
-                        <h4>Projeto Streamer</h4>
-                        <p>Desenvolvi um projeto no qual consiste na criação de um site personalizado para um streamer, cujo principal objetivo é fornecer aos visitantes uma maneira fácil e intuitiva de acessar suas diferentes redes sociais. O site foi projetado com um layout simples, limpo e moderno, com destaque para os botões das redes sociais do streamer. Foram utilizadas apenas as linguagens HTML e CSS.</p>
-                    </div>
-                    <div class="cargo">
-                        <h3>Expert em Interação</h3>
-                        <h4>Teleperformance - UOL</h4>
-                        <p>Durante meus 3 anos na Teleperformance (UOL), fui designado pela empresa a vender e personalizar sites e anúncios de acordo com o perfil da empresa do cliente. Ao longo desse período, aprimorei minhas habilidades em vendas, incluindo a capacidade de identificar as necessidades do cliente e oferecer soluções personalizadas. Também desenvolvi habilidades em web design, que me permitiram personalizar os sites dos clientes e criar anúncios que atendessem às necessidades específicas deles.</p>
-                    </div>
-                </section>
                 <section class="formacao">
                     <h2>Formação</h2>                     
                     <div class="formacao-container">
@@ -153,6 +132,31 @@
                         </ul>
                     </div>
                 </section>
+            </div>
+
+            <div class="coluna-direita">
+                <section class="experiencias">
+                    <h2>Experiêncas</h2>
+                    <div class="cargo">
+                        <h3>FrontEnd</h3>
+                        <h4>Meu Portfólio</h4>
+                        <p>Embarquei em um desafio que reuniu todas as minhas experiências, resultando em um site que representa fielmente meu portfólio. Desde o design até a implementação com JavaScript e indexação no Google.</p>
+                        <p>Nele, apresento todas as linguagens que domino, tanto em teoria, com explicações detalhadas ao passar o mouse em cada habilidade, quanto na prática, exibindo meu próprio portfólio construído. Além disso, há uma seção dedicada a projetos reais que desenvolvi.</p>
+                        <p>Priorizei as melhores práticas de SEO, acessibilidade e semântica para garantir a excelência do projeto. As linguagens utilizadas foram: HTML, CSS e JavaScript. </p>
+                        <a class="ver-projeto" target="_blank" href="https://rafakingportfolio.netlify.app/">Ver Projeto</a>
+                    </div>
+                    <div class="cargo">
+                        <h3>FrontEnd</h3>
+                        <h4>Projeto Streamer</h4>
+                        <p>Desenvolvi um projeto no qual consiste na criação de um site personalizado para um streamer, cujo principal objetivo é fornecer aos visitantes uma maneira fácil e intuitiva de acessar suas diferentes redes sociais. O site foi projetado com um layout simples, limpo e moderno, com destaque para os botões das redes sociais do streamer. Foram utilizadas apenas as linguagens HTML e CSS.</p>
+                        <a class="ver-projeto" target="_blank" href="https://bizuuts.com.br/">Ver Projeto</a>
+                    </div>
+                    <div class="cargo">
+                        <h3>Expert em Interação</h3>
+                        <h4>Teleperformance - UOL</h4>
+                        <p>Durante meus 3 anos na Teleperformance (UOL), fui designado pela empresa a vender e personalizar sites e anúncios de acordo com o perfil da empresa do cliente. Ao longo desse período, aprimorei minhas habilidades em vendas, incluindo a capacidade de identificar as necessidades do cliente e oferecer soluções personalizadas. Também desenvolvi habilidades em web design, que me permitiram personalizar os sites dos clientes e criar anúncios que atendessem às necessidades específicas deles.</p>
+                    </div>
+                </section>    
             </div>
         </div>
     </main>
