--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>Rafael Sérgio de Souza</h1>
                 <p>Desenvolvedor FrontEnd</p>
                 <ul>
-                    <li>contato@rafaelsouza.com</li>
+                    <li>contato@rafaelssouza.com</li>
                     <li>(11)9 8870-1263</li>
                     <li>Guarulhos - SP</li>
                 </ul>
@@ -163,7 +163,7 @@
     <footer class="footer-bg">
         <div class="footer">
             <div class="footer-name">
-                <p>Desenvolvido por <span class="nome">Rafael Souza</span><img class="coroa" src="midia/coroaa.png" alt="coroa"><br>Email: contato@rafaelsouza.com.br</p>                
+                <p>Desenvolvido por <span class="nome">Rafael Souza</span><img class="coroa" src="midia/coroaa.png" alt="coroa"><br>Email: contato@rafaelssouza.com</p>                
             </div>
             <div class="footer-social">
                 <div class="redes-sociais">
