--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Rafael Souza CV</title>
     <meta name="author" content="Rafael Souza">
-    <meta name="description" content="Currículo feito de uma maneira interativa para tentar fugir do padrão de formatos como por exemplo .docx ou pdf. Com a possibilidade também de ver em Dark Mode, para quem gosta da escuridão">
+    <meta name="description" content="Currículo sobre mim (Rafael Souza) feito de uma maneira interativa para tentar fugir do padrão de formatos como por exemplo .docx ou pdf. Com a possibilidade também de ver em Dark Mode, para quem gosta da escuridão">
     <meta name="keywords" content="Currículo, CV, Rafael, Rafael Souza, Rafael Sergio de Souza, Rafaking, Experiência profissional, Formação acadêmica, Habilidades, Competências, Portfólio, Perfil profissional, Informações de contato, Desenvolvimento pessoal, Projetos, Idiomas, Certificações, Referências, Responsivo, Design moderno, Interface intuitiva, Personalizado, Análise de dados, Trabalho em equipe,">
     <link rel="icon" type="image/png" href="midia/coroaa.png">
     <meta charset="UTF-8">
