--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Rafael Souza CV</title>
+    <title>Rafael Currículo</title>
     <meta name="author" content="Rafael Souza">
     <meta name="description" content="Currículo sobre mim (Rafael Souza) feito de uma maneira interativa para tentar fugir do padrão de formatos como por exemplo .docx ou pdf. Com a possibilidade também de ver em Dark Mode, para quem gosta da escuridão">
     <meta name="keywords" content="Currículo, CV, Rafael, Rafael Souza, Rafael Sergio de Souza, Rafaking, Experiência profissional, Formação acadêmica, Habilidades, Competências, Portfólio, Perfil profissional, Informações de contato, Desenvolvimento pessoal, Projetos, Idiomas, Certificações, Referências, Responsivo, Design moderno, Interface intuitiva, Personalizado, Análise de dados, Trabalho em equipe,">
-    <link rel="icon" type="image/png" href="midia/coroaa.png">
+    <link rel="icon" type="image/png" href="midia/me.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
