--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <footer class="footer-bg">
         <div class="footer">
             <div class="footer-name">
-                <p>Desenvolvido por <span class="nome">Rafael Souza</span><img class="coroa" src="midia/coroaa.png" alt="coroa"><br>Email: contato@rafaelssouza.com</p>                
+                <p>Desenvolvido por <span class="nome">Rafael Souza</span><img class="coroa" src="midia/coroa.png" alt="coroa"><br>Email: contato@rafaelssouza.com</p>                
             </div>
             <div class="footer-social">
                 <div class="redes-sociais">
