--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li>contato@rafaelssouza.com</li>
                     <li>(11)9 8776-0455</li>
                     <li>Guarulhos - SP</li>
+                    <li><a href="https://rafaelssouza.com" target="_blank">Meu Portfólio</a></li>
                 </ul>
             </div>
             <label>
