--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="contato">
                 <h1>Rafael Sérgio de Souza</h1>
-                <p>Desenvolvedor FrontEnd</p>
+                <p>Desenvolvedor Front-End</p>
                 <ul>
                     <li>contato@rafaelssouza.com</li>
                     <li>(11)9 8776-0455</li>
