--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <section class="cursos">
                     <h2>Cursos</h2>
                     <ul>
-                        <li>HTML e CSS - <i>Udemy</i></li>
+                        <li>HTML e CSS - <i>Serliv</i></li>
                         <li>JavaScript - <i>Origamid</i></li>
                         <li>Técnico de informática - <i>Microlins</i></li>
                         <li>Inglês - <i>Wizard</i></li>
